# olc-j-pixel-game-engine

./: .gitignore  README.MD  buildNativeDlls.bat  buildNativeDlls.sh  dockerfile  generateHeaderFiles.bat  pom.xml
.github/workflows/: build-native-libs.yml  maven-publish.yml
native/: CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Makefile  cmake_install.cmake  experiments.cpp  olcPixelGameEngine.h  org_kurodev_Example.c  org_kurodev_Example.h  org_kurodev_jpixelgameengine_PixelGameEngineNativeImpl.h  org_kurodev_jpixelgameengine_impl_PixelGameEngineNativeImpl.h  org_kurodev_pixelGameEngineFFM.cpp  org_kurodev_pixelgameEngineWrapper.cpp
sprites/: meta.txt
src/main/java/org/kurodev/: Example.java  Main.java  NativeLoader.java  PixelGameEngineImpl.java
src/main/java/org/kurodev/example/: OlcButton.java  PixelGameEngineImpl.java
src/main/java/org/kurodev/jpixelgameengine/: Decal.java  HWButton.java  NativeCallCandidate.java  Pixel.java  PixelGameEngine.java  PixelGameEngineNativeImpl.java  PixelGameEngineWrapper.java  Sprite.java  Vector2D.java
src/main/java/org/kurodev/jpixelgameengine/draw/: Decal.java  Pixel.java  Sprite.java
src/main/java/org/kurodev/jpixelgameengine/gfx/: CullMode.java  Decal.java  LineClipResult.java  OlcReferenceCleaner.java  Pixel.java  PixelMode.java  PixelModeFunction.java  Renderable.java  ResourcePack.java
src/main/java/org/kurodev/jpixelgameengine/gfx/animation/: Animation.java  SpriteSheetDecal.java
src/main/java/org/kurodev/jpixelgameengine/gfx/decal/: Decal.java  DecalMode.java  DecalPatch.java  DecalStructure.java
src/main/java/org/kurodev/jpixelgameengine/gfx/sprite/: FlipMode.java  Sprite.java  SpritePatch.java  SpriteSampleMode.java
src/main/java/org/kurodev/jpixelgameengine/impl/: MemUtil.java  NativeCallCandidate.java  PixelGameEngineInitialiser.java  PixelGameEngineNativeImpl.java  PixelGameEngineWrapper.java  PixelgameEngineReturnCode.java  PointerClass.java
src/main/java/org/kurodev/jpixelgameengine/impl/ffm/: BatchedPixelGameEngine.java  EngineInitialiser.java  NativeEngineInstanceFunction.java  NativeFunction.java  NativeStatusCode.java  NativeStringFunction.java  OlcMethods.java  PixelGameEngine.java  Util.java  engineInitializer.java
src/main/java/org/kurodev/jpixelgameengine/impl/ui/: UIManager.java
src/main/java/org/kurodev/jpixelgameengine/impl/ui/base/: IntersectComponent.java  MouseState.java  UiComponent.java
src/main/java/org/kurodev/jpixelgameengine/impl/util/: RunnableWrapper.java  Util.java
src/main/java/org/kurodev/jpixelgameengine/input/: HWButton.java  KeyBoardKey.java  MouseKey.java
src/main/java/org/kurodev/jpixelgameengine/pos/: DoubleVector2D.java  FloatVector2D.java  IntVector2D.java  IntegerVector2D.java  LongVector2D.java  Vector2D.java
src/main/java/org/kurodev/jpixelgameengine/vectorimpl/: DoubleVector2D.java  FloatVector2D.java  IntegerVector2D.java  LongVector2D.java
src/main/resources/: simplelogger.properties
src/test/java/: AssetTests.java  PixelGameEngineNativeWrapperTests.java
src/test/java/org/kurodev/example/: Main.java  PerformanceTest.java  PixelGameEngineImpl.java
